# CodeReviewer

./: AGENTS.md  Cargo.toml  README.md  opencode.json
.opencode/skills/code-review/: SKILL.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: analyzer.rs  config.rs  finding.rs  lib.rs  llm.rs  parser.rs  reporter.rs  rule.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs  r01_fallback.rs  r02_bloat.rs  r03_missing_doc.rs  r04_simple_unit_test.rs  r05_shallow_integration.rs  r06_over_engineering.rs  r07_dead_code.rs  r08_todo.rs  r09_commented_code.rs  r10_magic_number.rs  r14_hardcoded_secret.rs  r15_missing_validation.rs  r16_self_validating_test.rs  r18_async_missing_await.rs  r19_n_plus_one.rs  r20_resource_leak.rs  r23_wrong_error_type.rs  r24_hardcoded_path.rs  r28_overly_defensive.rs
crates/rules/tests/: integration.rs
docs/design/: design.md  rule-candidates.md
docs/requirements/: requirements.md
docs/tracking/: implementation-tracker.md
scripts/: rebuild-mcp.ps1
tests/fixtures/: problematic.rs  sample_rust.rs
