[package]
name = "codereviewer-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codereviewer-core = { path = "../core" }
codereviewer-rules = { path = "../rules" }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"

[[bin]]
name = "codereviewer-mcp"
path = "src/main.rs"
